@@ -1,13 +1,18 @@
-* Pretty URLs contributors *
-* Development *
+Pretty URLs contributors
+========================
+
+Development
+===========
 Dannii Willis <curiousdannii@gmail.com>
 René-Gilles Deberdt
+Yağız
 
-* Translations *
+Translations
+============
 BrainHell
 Daniel J Karlsson <daniel.j.karlsson@gmail.com>
 Özgür
 René-Gilles Deberdt
 Sergei Sedov <sedov@webmail.perm.ru>
 shaitan <shaitan@passion-xbmc.org>
-Yagiz
+Yağız
